# meka

./: CMakeLists.txt  README.rst  build.ninja
src/: PrintFunctionNames.cpp  RenameMethod.cpp  RewriterSample.cpp  ToolTemplate.cpp  refactoring-tool.cpp
src/meka/: automeka.cpp
